--- a/Desafios/Desafio005/index.html
+++ b/Desafios/Desafio005/index.html
@@ -9,28 +9,29 @@
 </head>
 <body>
     <header>
-        <h1>Verificador de identidade</h1>
+        <h1>Verificador de Idade</h1>
     </header>
-    <main>
-        <form action="script.js">
-            <p>
-                <label for="inas">Qual o seu ano de nascimento</label>
-                <input type="number" name="nas" id="inas" value="2000">
+    <section>
+        <div>
+            <p>Ano de nascimento: 
+                <input type="number" name="txtano" id="txtano">
+            </p>
+            <p>Sexo:
+                <input type="radio" name="radiosex" id="masc">
+                <label for="masc">Masculino</label>
+                <input type="radio" name="radiosex" id="fem">
+                <label for="fem">Feminino</label>
             </p>
             <p>
-                <label for="isex">Sexo: </label>
-                Masculino: <input type="checkbox" name="sex" id="imas">
-                Feminino: <input type="checkbox" name="sex" id="ifem">
+                <input type="button" value="Verificar" onclick="verificar()">
             </p>
-            <input type="button" value="Verificar" onclick="verifique()">
-        </form>
-        <p>
-            Preencha os dados acima para ver o resultado!
-        </p>
-        <div id="res"></div>
-    </main>
+        </div>
+        <div id="res">
+            <p>Preencha os dados acima para você ver o resultado!</p>
+        </div>
+    </section>
     <footer>
-        <img src="" alt="">
+        &copy; Curso em vídeo
     </footer>
     <script src="script.js">
 
