--- a/Desafios/Desafio009/index.html
+++ b/Desafios/Desafio009/index.html
@@ -10,21 +10,24 @@
             background-color: rgb(25, 155, 198);
             font: normal 15pt arial;
         }
-        header, main {
-            color: White;
+        header {
             text-align: center;
         }
-        main {
-            margin-left: 25%;
+        header, section {
+            color: White;
+    
+        }
+        section {
+            margin-left: 30%;
             background-color: white;
-            width: 50%;
+            width: 40vw;
             color: black;
-            height: 60vh;
             border-radius: 20px;
         }
-        p {
+        div {
             padding: 20px;
-            color: rgb(2, 2, 67);
+            font-size: 1.5em;
+            line-height: 50px;
         }
     </style>
 </head>
@@ -32,22 +35,20 @@
     <header>
         <h1>Vamos contar</h1>
     </header>
-    <main>
-        <p>
-            <label for="in1">Inicio:</label>
-            <input type="number" name="n1" id="in1">
-        </p>
-        <p>
-            <label for="in2">Fim:</label>
-            <input type="number" name="n2" id="in2">
-        </p>
-        <p>
-            <label for="in3">Passo</label>
-            <input type="number" name="n3" id="in3">
-        </p>
-        <input type="button" value="Enviar" onclick="clicou()">
-        <div id="ires"></div>
-    </main>
+    <section>
+        <div id="dados">
+            <label for="txti">Inicio: </label> 
+            <input type="number" name="inicio" id="txti"> <br>
+            <label for="txtf">Fim:  </label> 
+            <input type="number" name="fim" id="txtf"> <br>
+            <label for="txtp">Passo: </label> 
+            <input type="number" name="passo" id="txtp">
+            <input type="button" value="Contar" onclick="contar()">
+        </div>
+        <div id="res">
+            <p>Preparando  contagem...</p>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
